# OLDNickelsLab

./: README.md
EPuck/DemoGCtronic-complete/: DataEEPROM.s  demoGCtronic.map  demoGCtronic.mcp  epuckPlayer.c  main_c.c  memory.h  runaccelerometer.c  runlocatesound.h  runshow.c  runwallfollow.c  translatorI2C.c
EPuck/DemoGCtronic-complete/.svn/: wc.db
EPuck/DemoGCtronic-complete/a_d/advance_ad_scan/: e_acc.c  e_prox.c
EPuck/DemoGCtronic-complete/camera/fast_2_timer/: e_po6030k.h
EPuck/DemoGCtronic-complete/demoGCtronic.X/nbproject/: Makefile-default.mk  Makefile-genesis.properties  Makefile-local-default.mk  configurations.xml  project.xml
EPuck/DemoGCtronic-complete/demoGCtronic.X/nbproject/private/: configurations.xml
EPuck/DemoGCtronic-complete/motor_led/: e_epuck_ports.h
EPuck/DemoGCtronic-complete/nbproject/: Makefile-genesis.properties
EPuck/DemoGCtronic-complete/uart/: e_uart_char.h
EPuck/e-puck-svn-snapshot/.svn/: entries
EPuck/e-puck-svn-snapshot/program/.svn/: entries
EPuck/e-puck-svn-snapshot/program/BTcom/.svn/: entries
EPuck/e-puck-svn-snapshot/program/DemoGCtronic-complete/: Asercom.c  DataEEPROM.s  demoGCtronic.cof  demoGCtronic.hex  demoGCtronic.map  demoGCtronic.mcp  epuckPlayer.c  main_c.c  memory.h
EPuck/e-puck-svn-snapshot/program/DemoGCtronic-complete/.svn/: wc.db
EPuck/e-puck-svn-snapshot/program/DemoGCtronic-complete/uart/: e_init_uart2.s
EPuck/e-puck-svn-snapshot/program/bluetooth_mirror/.svn/: entries
EPuck/e-puck-svn-snapshot/program/demo/.svn/: entries
EPuck/e-puck-svn-snapshot/program/statics libraries maker/.svn/: entries
EPuck/e-puck-svn-snapshot/tool/.svn/: entries
EPuck/e-puck-svn-snapshot/tool/bluetooth_setup/.svn/: entries
EPuck/e-puck-svn-snapshot/tool/bootloader/.svn/: entries
EPuck/e-puck-svn-snapshot/tool/e-puck_monitor/.svn/: entries
EPuck/e-puck-svn-snapshot/tool/ePic/.svn/: entries
EPuck/libepuck-0.4.0/: ChangeLog  Doxyfile  Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  libtool
EPuck/libepuck-0.4.0/doc/doxygen/: Makefile  Makefile.am  Makefile.in
EPuck/libepuck-0.4.0/doc/doxygen/html/: annotated.html  classEpuckCamera-members.html  classEpuckCamera.html  classEpuckDriver2__0-members.html  classEpuckDriver2__0.html  classEpuckDriver2__1-members.html  classEpuckDriver2__1.html  classEpuckIR-members.html  classEpuckIR.html  classEpuckInterface-members.html  classEpuckInterface.html  classEpuckLEDs-members.html  classEpuckLEDs.html  classEpuckPosition2d-members.html  classEpuckPosition2d.html  classSerialPort-members.html  classSerialPort.html  classTimer-members.html  classTimer.html  epuckCamera_8hpp-source.html  epuckCamera_8hpp.html  epuckDriver2__0_8hpp-source.html  epuckDriver2__0_8hpp.html  epuckDriver2__1_8hpp-source.html  epuckDriver2__1_8hpp.html  epuckIR_8hpp-source.html  epuckIR_8hpp.html  epuckInterface_8hpp-source.html  epuckInterface_8hpp.html  epuckLEDs_8hpp-source.html  epuckLEDs_8hpp.html  epuckPosition2d_8hpp-source.html  epuckPosition2d_8hpp.html  examples.html  files.html  formula.repository  functions.html  functions_enum.html  functions_eval.html  functions_func.html  (+29 more)
EPuck/libepuck-0.4.0/doc/player_2_0/: Makefile  epuck.cfg  ir.c  opaqueLED.c
EPuck/libepuck-0.4.0/epuckSide/: Makefile  README  epuckPlayer.c  linker.py  main.c  outputV300.hex
EPuck/libepuck-0.4.0/src/: Makefile  Makefile.am  Makefile.in  epuckDriver2_0.cpp  epuckDriver2_0.hpp  epuckDriver2_1.cpp  epuckDriver2_1.hpp
FastSLAM/Playerstage_Setup/: cepuck.cfg  cepuck2.cfg  epuck.world  epuck2.world  epuck_player.cfg  map.inc  new_stage_model.inc
FastSLAM/Playerstage_Setup/bitmaps/: better.jpg.crdownload
FastSLAM/python_controllers/: .functions.py.swp  sensor_print.py
Navigation/User_workspace/devel/: _setup_util.py
Navigation/User_workspace/devel/lib/pkgconfig/: csi_navigation.pc
Navigation/User_workspace/src/csi_navigation/scripts/: ListOfRooms  talker.py
Occupancy_Grid/: Probability_OG.py  README.txt  Real_OG.py  Sim_OG.py  Uncondensed_OG.py
Papers/Playerstage/: player-stage-final-report-Summer.doc
Papers/SLAM/: InterestingSites.txt
Papers/Tarquino_Su13/: Tarquino_Summer_Report2.docx
Papers/Tarquino_Su13/Images/: README.txt  Sim-s1-Breadcrumbs
Papers/Tarquino_Su13/Presentation/: Tarquino_Poster.pptx
PlayerStage/BigBob/: README.txt  bb.cfg  bb_control.py  bb_wander.py  bigbob.inc  real_epuck_wander.py  robots_and_junk.world
PlayerStage/Occupancy_Grid/: Full_OG.py  breadcrumbs.py  condensed_OG.py
PlayerStage/Physical_Epuck/: btepuck_3100.cfg  btepuck_3298.cfg  read_epuck_line.py
PlayerStage/Player_Epuck_driver/epuck/: epuckDriver.cpp
PlayerStage/Robot_Controllers/: KeyBoardArrows-Controller.py  README.txt  REal-WAnder-Controller.py  Sim-FSMWander-Controller.py  Sim-Wander-Controller.py
PlayerStage/Robot_Controllers/SU_14_Epuck_Controllers/Epuck_Controllers/: .sensor_print.py.swp  Ini_con.py  playercpp.py  sensor_print.py
PlayerStage/Simulated_Epuck/: 2_wepuck.world  2cepuck.cfg  README.txt  cepuck.cfg  epuck.inc  epuck_s3.inc  wepuck.world
PlayerStage/Simulated_Epuck/SU_14_code/Initial_epuck_code/: cepuck.cfg  epuck.world  new_stage_model.inc
PlayerStage/Simulated_Epuck/SU_14_code/updated_epuck_code/: epuck.world  map.inc
PlayerStage/basic_python_controller/: myversion.py~  pythoncontroller.py  pythoncontroller.py~  pythonexample.py  pythonexample.py~  simple.world
PlayerStage/python/: 2wander_epuck_final.py  README.txt  bt_key_control.py  example.py  fmap.py  follow_wall_epuck.py  key_control.py  map_key.py  map_wander.py  mapper.py  matrixplot.py  real_wander.py  redraw_map.py
PlayerStage/wallhug/: wallhug.cfg  wallhug.cfg~  wallhug.inc  wallhug.inc~  wallhug.world  wallhug.world~
PlayerStage/wallhug/libplayerc++/: CMakeLists.txt
catkin_ws/devel/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/share/csi_navigation/cmake/: csi_navigationConfig.cmake
catkin_ws/src/csi_navigation/: CMakeLists.txt
catkin_ws/src/csi_navigation/scripts/: PublishInitialAndGoal.py  initialPoseWCovariance.py
(+24 files in other folders)
