doxygendir = $(docdir)/doxygen
dist_doxygen_DATA = ./html/annotated.html \
                    ./html/classEpuckCamera.html \
                    ./html/classEpuckCamera-members.html \
                    ./html/classEpuckCamera.png \
                    ./html/classEpuckDriver2__0.html \
                    ./html/classEpuckDriver2__0-members.html \
                    ./html/classEpuckDriver2__1.html \
                    ./html/classEpuckDriver2__1-members.html \
                    ./html/classEpuckInterface.html \
                    ./html/classEpuckInterface-members.html \
                    ./html/classEpuckInterface.png \
                    ./html/classEpuckIR.html \
                    ./html/classEpuckIR-members.html \
                    ./html/classEpuckIR.png \
                    ./html/classEpuckLEDs.html \
                    ./html/classEpuckLEDs-members.html \
                    ./html/classEpuckLEDs.png \
                    ./html/classEpuckPosition2d.html \
                    ./html/classEpuckPosition2d-members.html \
                    ./html/classEpuckPosition2d.png \
                    ./html/classSerialPort.html \
                    ./html/classSerialPort-members.html \
                    ./html/classTimer.html \
                    ./html/classTimer-members.html \
                    ./html/doxygen.css \
                    ./html/doxygen.png \
                    ./html/epuckCamera_8hpp.html \
                    ./html/epuckCamera_8hpp-source.html \
                    ./html/epuckDriver2__0_8hpp.html \
                    ./html/epuckDriver2__0_8hpp-source.html \
                    ./html/epuckDriver2__1_8hpp.html \
                    ./html/epuckDriver2__1_8hpp-source.html \
                    ./html/epuckInterface_8hpp.html \
                    ./html/epuckInterface_8hpp-source.html \
                    ./html/epuckIR_8hpp.html \
                    ./html/epuckIR_8hpp-source.html \
                    ./html/epuckLEDs_8hpp.html \
                    ./html/epuckLEDs_8hpp-source.html \
                    ./html/epuckPosition2d_8hpp.html \
                    ./html/epuckPosition2d_8hpp-source.html \
                    ./html/examples.html \
                    ./html/files.html \
                    ./html/form_0.png \
                    ./html/form_1.png \
                    ./html/form_2.png \
                    ./html/form_3.png \
                    ./html/form_4.png \
                    ./html/formula.repository \
                    ./html/functions_enum.html \
                    ./html/functions_eval.html \
                    ./html/functions_func.html \
                    ./html/functions.html \
                    ./html/functions_vars.html \
                    ./html/hierarchy.html \
                    ./html/index.html \
                    ./html/pageCamera.html \
                    ./html/pages.html \
                    ./html/player__2__0_2camera_8c-example.html \
                    ./html/player__2__0_2ir_8c-example.html \
                    ./html/player__2__0_2opaqueLED_8c-example.html \
                    ./html/player__2__0_2position2d_8c-example.html \
                    ./html/player2_0.html \
                    ./html/player__2__1_2blinkenlight_8c-example.html \
                    ./html/player__2__1_2camera_8c-example.html \
                    ./html/player__2__1_2ir_8c-example.html \
                    ./html/player__2__1_2position2d_8c-example.html \
                    ./html/player2_1.html \
                    ./html/serialPort_8hpp.html \
                    ./html/serialPort_8hpp-source.html \
                    ./html/structEpuckInterface_1_1Triple.html \
                    ./html/structEpuckInterface_1_1Triple-members.html \
                    ./html/structEpuckIR_1_1IRData.html \
                    ./html/structEpuckIR_1_1IRData-members.html \
                    ./html/structEpuckLEDs_1_1LEDstate.html \
                    ./html/structEpuckLEDs_1_1LEDstate-members.html \
                    ./html/structEpuckPosition2d_1_1BodyGeometry.html \
                    ./html/structEpuckPosition2d_1_1BodyGeometry-members.html \
                    ./html/structEpuckPosition2d_1_1DynamicConfiguration.html \
                    ./html/structEpuckPosition2d_1_1DynamicConfiguration-members.html \
                    ./html/tab_b.gif \
                    ./html/tab_l.gif \
                    ./html/tab_r.gif \
                    ./html/tabs.css \
                    ./html/timer_8hpp.html \
                    ./html/timer_8hpp-source.html
